# webgpt

./: .gitignore  README.md  app.py  audio.webm  chat.curl  dry_chat.curl  dry_chat_no_id.curl  dry_first_chat.curl  first_chat.curl  image.curl  pyproject.toml  restart.curl
front/: index.css  index.html  index.html~  index.js  index.js~
